changed bug with overflow

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,7 +24,6 @@ body {
   border-radius: 20px;
   box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
   width: 100vw;
-  height: 100vh;
 }
 
 .content {
